<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">


    <item android:id="@+id/notesMenuItem"
        android:title="@string/notes"
        android:icon="@drawable/ic_notes"/>

    <item android:title="@string/anchors">
        <menu>
            <item android:id="@+id/addAnchorMenuItem"
                android:title="@string/addAnchor"
                android:icon="@drawable/ic_add" />
        </menu>
    </item>

    <item android:title="@string/management">
        <menu>
            <item android:id="@+id/trashBiMenuItem"
                android:title="@string/trashBin"
                android:icon="@drawable/ic_delete" />

            <item android:id="@+id/logoutMenuItem"
                android:title="@string/logout"
                android:icon="@drawable/ic_account_circle"/>
        </menu>

    </item>

</menu>